@@ -1,9 +1,23 @@
-
-<div id="registration-wrapper"> 
-    <form name="registerform" id="registerform" autocomplete="off" method="POST">
-        <input type="text" name="username" placeholder="Username">
-		<input type="text" name="password" placeholder="password">
-		<input type="text" name="action" value="{register_action}" style="display:none">
-        <input type="submit" value="{register_submit_text}">
-    </form> 
-</div>        
+<div class="body">
+	<h1>Fill out form:</h1>
+	<div id="registration-wrapper"> 
+		
+			<form name="registerform" id="registerform" autocomplete="off" method="POST">
+				<table id="registertable">
+					<tr>
+						<td>Username: </td>
+						<td><input type="text" name="username" placeholder="Username"></td>
+					</tr>
+					<tr>
+						<td>Password: </td>
+						<td><input type="text" name="password" placeholder="password"></td>
+					</tr>
+					<tr>
+						<td><input type="text" name="action" value="{register_action}" style="display:none"></td>
+						<td><input type="submit" value="Register"></td>
+					</tr>
+				</table>
+			</form> 
+		
+	</div>        
+</div>
