@@ -1,6 +1,7 @@
 Newest changes at the top
 Format: MM/DD/YYYY HH:MM - comment  
 
+04/10/2016 18:33 - Styled the register view
 04/10/2016 17:25 - created MVC components for registration and filled in some components
 04/10/2016 16:26 - Added agent registration functionality and admin interface
 04/08/2016 13:32 - Added functionality that gets game status from server and displays it
